--- a/enhancements/base/templates/base/specificfeature.html
+++ b/enhancements/base/templates/base/specificfeature.html
@@ -17,7 +17,6 @@
   <link href="{% static 'mdeditor/css/editormd.preview.css' %}" rel="stylesheet">
   <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
   <link href="https://unpkg.com/@github/details-dialog-element/dist/index.css" rel="stylesheet" />
-
 <div class="container-lg px-3 pt-6 pb-4">
 <div class="card col-12">
     <div class="col-12 clearfix mt-2">
@@ -70,6 +69,7 @@
         </div>
         <div class="TimelineItem-body">
             <p id="content">
+                {{pro.user}}
             {{ pro.tracker_description}}
             </p>
             <span class="text-small text-gray mr-2">#{{pro.trackerid}} updated {{ pro.updated_at|naturaltime}} </span>
