--- a/enhancements/base/templates/base/blog.html
+++ b/enhancements/base/templates/base/blog.html
@@ -67,6 +67,19 @@
             <a class="link-gray float-right" href="{% url 'feedback' %}" style="color:#d3d4d4; text-decoration: none; ">Give feedback</a>
             </div>
         </div>
+
+        <br>
+        <br>
+        {% if request.user.is_authenticated %}
+        <div class="col-12 clearfix mt-2">
+            <div class="d-flex float-left ml-5">
+              <a href="{%url 'newblog' %}" style="color: rgb(245, 169, 182) ; text-decoration: none;" >
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path d="M12.75 7.75a.75.75 0 00-1.5 0v3.5h-3.5a.75.75 0 000 1.5h3.5v3.5a.75.75 0 001.5 0v-3.5h3.5a.75.75 0 000-1.5h-3.5v-3.5z"></path><path fill-rule="evenodd" d="M12 1C5.925 1 1 5.925 1 12s4.925 11 11 11 11-4.925 11-11S18.075 1 12 1zM2.5 12a9.5 9.5 0 1119 0 9.5 9.5 0 01-19 0z"></path></svg>
+                &nbsp;<i style="color: #d3d4d4;">Add New Blog</i>
+              </a>
+            </div>
+        </div>
+        {% endif %}
         <div class=" px-6 mt-8" style="color: #d3d4d4;">
           {% for blog in blogs %}
             <div class="TimelineItem">
@@ -78,9 +91,11 @@
 
                 <div class="TimelineItem-body" style=" margin: auto; background-color: #0f161e; color: white; border-radius: 5px;">
                         <div class="m-4">
-                            <h2><a style="text-decoration: none; color: #d3d4d4;" href="{% url 'sblog' blog.id %}">{{blog.blog_title}}</a> &nbsp;
+                            <h2><a style="text-decoration: none; color: #d3d4d4;" href="{% url 'sblog' blog.id %}">{{blog.blog_title}}</a> 
                                 {%if request.user.is_authenticated %}
                                  <a style="text-decoration: none; color:rgb(245, 169, 182) ;" href="{%url 'blogedit' blog.id %}"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="24" height="24"><path fill-rule="evenodd" d="M11.013 1.427a1.75 1.75 0 012.474 0l1.086 1.086a1.75 1.75 0 010 2.474l-8.61 8.61c-.21.21-.47.364-.756.445l-3.251.93a.75.75 0 01-.927-.928l.929-3.25a1.75 1.75 0 01.445-.758l8.61-8.61zm1.414 1.06a.25.25 0 00-.354 0L10.811 3.75l1.439 1.44 1.263-1.263a.25.25 0 000-.354l-1.086-1.086zM11.189 6.25L9.75 4.81l-6.286 6.287a.25.25 0 00-.064.108l-.558 1.953 1.953-.558a.249.249 0 00.108-.064l6.286-6.286z"></path></svg></a>
+                                 <a class="float-right" style="text-decoration: none; color: rgb(231, 50, 50);" href="{%url 'blogdelete' blog.id %}"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="20" height="20"><path fill-rule="evenodd" d="M6.5 1.75a.25.25 0 01.25-.25h2.5a.25.25 0 01.25.25V3h-3V1.75zm4.5 0V3h2.25a.75.75 0 010 1.5H2.75a.75.75 0 010-1.5H5V1.75C5 .784 5.784 0 6.75 0h2.5C10.216 0 11 .784 11 1.75zM4.496 6.675a.75.75 0 10-1.492.15l.66 6.6A1.75 1.75 0 005.405 15h5.19c.9 0 1.652-.681 1.741-1.576l.66-6.6a.75.75 0 00-1.492-.149l-.66 6.6a.25.25 0 01-.249.225h-5.19a.25.25 0 01-.249-.225l-.66-6.6z"></path></svg></a>
+                                 
                                 {% endif %}
                             </h2>
                             <br>
