--- a/base/templates/base/specificblog.html
+++ b/base/templates/base/specificblog.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load humanize %}
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -60,6 +61,36 @@
         <div class="m-2" style=" margin: auto; background-color: #0f161e; color: white; border-radius: 5px;">
             <div class=" mb-2 pr-4  text-small text-gray float-right">
                 <a href="{%url 'blog'%}" style="text-decoration: none; color: rgb(255, 255, 255);"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="34" height="34"><path fill-rule="evenodd" d="M10.78 19.03a.75.75 0 01-1.06 0l-6.25-6.25a.75.75 0 010-1.06l6.25-6.25a.75.75 0 111.06 1.06L5.81 11.5h14.44a.75.75 0 010 1.5H5.81l4.97 4.97a.75.75 0 010 1.06z"></path></svg></a>
+                <br>
+                <br>
+                <br>
+                <details class="details-reset details-overlay details-overlay-dark">
+                  <summary class="btn" aria-haspopup="dialog">Add Comment</summary>
+                  <details-dialog class="Box Box--overlay d-flex flex-column anim-fade-in fast">
+                    <div class="Box-header">
+                      <button class="Box-btn-octicon btn-octicon float-right" type="button" aria-label="Close dialog" data-close-dialog>
+                        <!-- <%= octicon "x" %> -->
+                        <a href="{%url 'sblog' blog.id%}" ><svg class="octicon octicon-x" viewBox="0 0 12 16" version="1.1" width="12" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M7.48 8l3.75 3.75-1.48 1.48L6 9.48l-3.75 3.75-1.48-1.48L4.52 8 .77 4.25l1.48-1.48L6 6.52l3.75-3.75 1.48 1.48L7.48 8z"></path></svg></a>
+                      </button>
+                      <h3 class="Box-title">Add Comment</h3>
+                    </div>
+                    <div class="overflow-auto">
+                      <div class="Box-body overflow-auto">
+                    <form action="" autocomplete="off" method="POST">
+                        {% csrf_token %}
+                        {{ form.media}}
+                        {{ form|crispy }}
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <a class="btn btn-sm btn-danger "  href="{% url 'sblog' blog.id %}">Cancel</a>
+                    </form>
+                   </div>
+                    </div>
+                  </details-dialog>
+                </details>
+
+                <!-- Temporary overrides (don't use in production) -->
+                <style> .frame-example { min-height: 500px; } </style>
+                <link href="https://unpkg.com/@github/details-dialog-element/dist/index.css" rel="stylesheet" />
             </div>
             <br>
             <div class="m-4" >
