--- a/base/templates/base/specificfeature.html
+++ b/base/templates/base/specificfeature.html
@@ -51,6 +51,10 @@
             <summary class="btn" aria-haspopup="dialog" style="border-radius: 15px; background-color: #0069D9; color:white; ">Add progress</summary>
             <details-dialog class="Box Box--overlay d-flex flex-column anim-fade-in fast">
                 <div class="Box-header">
+                    <button class="Box-btn-octicon btn-octicon float-right" type="button" aria-label="Close dialog" data-close-dialog>
+                        <!-- <%= octicon "x" %> -->
+                        <a href="{%url 'specificfeature' feature.tracking_id%}" ><svg class="octicon octicon-x" viewBox="0 0 12 16" version="1.1" width="12" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M7.48 8l3.75 3.75-1.48 1.48L6 9.48l-3.75 3.75-1.48-1.48L4.52 8 .77 4.25l1.48-1.48L6 6.52l3.75-3.75 1.48 1.48L7.48 8z"></path></svg></a>
+                      </button>
                 <h3 class="Box-title">Add progress</h3>
                 </div>
                 <div class="overflow-auto">
