--- a/base/templates/base/features.html
+++ b/base/templates/base/features.html
@@ -67,9 +67,9 @@
                         <div class="d-flex  flex-items-start pl-5">
                             <button class="btn btn-primary" style="pointer-events: none;">{{ project.project_title }}</button>
                             <div class="Popover position-relative">
-                                <div class="Popover-message Popover-message--left-top p-4 ml-2 Box box-shadow-large" style="width: max-content;" >
-                                  <b>Enhancements</b>
-                                       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'newfeature' project.project_id %}"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 2a.75.75 0 01.75.75v4.5h4.5a.75.75 0 010 1.5h-4.5v4.5a.75.75 0 01-1.5 0v-4.5h-4.5a.75.75 0 010-1.5h4.5v-4.5A.75.75 0 018 2z"></path></svg></a>
+                                <div class="Popover-message Popover-message--left-top p-4 ml-2 Box box-shadow-large" style="width: max-content; background-color: #061f2f;" >
+                                  <b style="color: #d3d4d4;">Enhancements</b>
+                                       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a style="text-decoration: none; color: #d3d4d4;" href="{% url 'newfeature' project.project_id %}"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 2a.75.75 0 01.75.75v4.5h4.5a.75.75 0 010 1.5h-4.5v4.5a.75.75 0 01-1.5 0v-4.5h-4.5a.75.75 0 010-1.5h4.5v-4.5A.75.75 0 018 2z"></path></svg></a>
                                     <br>
                                     {% for feature in features %}
                                         {% if feature.feature_id.project_id == project.project_id %}
@@ -77,6 +77,8 @@
                                         <hr>
                                         <ul >
                                         {% if request.user.is_authenticated %}
+                                        <span class="tooltipped tooltipped-e float-left" >
+                                          <span class="v-align-middle">
                                             {% if feature.status == "Working" %}
                                             <svg class="octicon anim-pulse" id="working" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 1.5a6.491 6.491 0 00-5.285 2.715l1.358 1.358A.25.25 0 013.896 6H.25A.25.25 0 010 5.75V2.104a.25.25 0 01.427-.177l1.216 1.216a8 8 0 0114.315 4.03.748.748 0 01-.668.83.75.75 0 01-.824-.676A6.501 6.501 0 008 1.5zM.712 8.004a.75.75 0 01.822.67 6.501 6.501 0 0011.751 3.111l-1.358-1.358a.25.25 0 01.177-.427h3.646a.25.25 0 01.25.25v3.646a.25.25 0 01-.427.177l-1.216-1.216A8 8 0 01.042 8.827a.75.75 0 01.67-.823zM9 11a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z"></path></svg>
                                             {% elif feature.status == "Completed" %}
@@ -84,8 +86,10 @@
                                             {% elif feature.status == "Discarded" %}
                                             <svg id="queued" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8zm9 3a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z"></path></svg>
                                             {% endif %}
+                                          </span>
+                                        </span>
                                         &nbsp;
-                                        <a class="link-gray-dark no-underline v-align-middle h4" href="{% url 'specificfeature' feature.tracking_id %}">{{feature.feature_name}}</a> 
+                                        <a style="color: #d3d4d4; text-decoration: none;" class="v-align-middle h4" href="{% url 'specificfeature' feature.tracking_id %}">{{feature.feature_name}}</a> 
                                         {% else %}
                                             {% if feature.status == "Working" %}
                                             <svg id="working" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 1.5a6.491 6.491 0 00-5.285 2.715l1.358 1.358A.25.25 0 013.896 6H.25A.25.25 0 010 5.75V2.104a.25.25 0 01.427-.177l1.216 1.216a8 8 0 0114.315 4.03.748.748 0 01-.668.83.75.75 0 01-.824-.676A6.501 6.501 0 008 1.5zM.712 8.004a.75.75 0 01.822.67 6.501 6.501 0 0011.751 3.111l-1.358-1.358a.25.25 0 01.177-.427h3.646a.25.25 0 01.25.25v3.646a.25.25 0 01-.427.177l-1.216-1.216A8 8 0 01.042 8.827a.75.75 0 01.67-.823zM9 11a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z"></path></svg>
@@ -95,11 +99,12 @@
                                             <svg id="queued" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8zm9 3a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z"></path></svg>
                                             {% endif %}
                                         &nbsp;
-                                        <a class="link-gray-dark no-underline v-align-middle h4" href="{% url 'specificfeature' feature.tracking_id %}">{{feature.feature_name}}</a>
+                                         <a style="text-decoration: none; color: #d3d4d4;" class="v-align-middle h4" href="{% url 'specificfeature' feature.tracking_id %}">{{feature.feature_name}}</a>
                                         {% endif %}
+                                        
                                             </ul>
                                         </h4>
-                                        <p style="font-size: small;"> 
+                                        <p style="font-size: small; color: #d3d4d4;"> 
                                         created <relative-time datetime="2020-08-25T06:16:01Z" class="no-wrap">{{feature.date_created}}</relative-time>
                                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                         updated <relative-time datetime="2020-08-25T06:31:06" class="no-wrap">{{feature.updated_at|naturaltime}}</relative-time>
